fix bug where profile photo was pill shaped on mobile - css organization

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -395,7 +395,7 @@ p {
   flex-direction: row;
 }
 
-.profile_photo_image_body {
+.about_me_snowshoeing_photo {
   border-radius: 50px;
   width: 43%;
   height: 100%;
@@ -403,7 +403,7 @@ p {
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
 }
 
-.profile_photo_image_body_2 {
+.about_me_ski_photo {
   border-radius: 50px;
   width: 50%;
   height: 100%;
@@ -419,10 +419,10 @@ p {
 }
 
 .wave {
-  animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
-  animation-duration: 2.5s; /* Change to speed up or slow down */
-  animation-iteration-count: infinite; /* Never stop waving :) */
-  transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+  animation-name: wave-animation;
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+  transform-origin: 70% 70%;
   display: inline-block;
 }
 
@@ -432,7 +432,7 @@ p {
   }
   10% {
     transform: rotate(14deg);
-  } /* The following five values can be played with to make the waving more or less extreme */
+  }
   20% {
     transform: rotate(-8deg);
   }
@@ -447,7 +447,7 @@ p {
   }
   60% {
     transform: rotate(0deg);
-  } /* Reset for the last half to pause */
+  }
   100% {
     transform: rotate(0deg);
   }
@@ -513,7 +513,6 @@ li {
 
 .github_button:active {
   transform: scale(0.9);
-  /* Add your desired action here */
 }
 
 .website_button {
@@ -598,7 +597,7 @@ li {
     padding-bottom: 50px;
   }
 
-  .profile_photo_image_body {
+  .about_me_snowshoeing_photo {
     margin-right: 0px;
   }
 
@@ -608,10 +607,6 @@ li {
     padding-bottom: 20px;
     align-items: center;
     gap: 20px;
-  }
-
-  .github_button {
-    /* margin-left: 10px; */
   }
 
   #about {
@@ -681,8 +676,8 @@ li {
   .profile_photo_image {
     width: 100px;
     height: 100px;
-    border-radius: 100px;
-    margin-top: 100px;
+    border-radius: 50%;
+    margin-top: 110px;
   }
 
   .text_description_1 {
@@ -882,11 +877,11 @@ li {
     margin-bottom: 40px;
   }
 
-  .profile_photo_image_body {
+  .about_me_snowshoeing_photo {
     width: 100%;
   }
 
-  .profile_photo_image_body_2 {
+  .about_me_ski_photo {
     width: 100%;
   }
 
@@ -912,7 +907,7 @@ li {
   }
 
   ul > li > ul > li {
-    margin-top: 10px; /* Add margin to nested list items */
+    margin-top: 10px;
     padding-left: 20px;
     list-style-type: circle;
   }
@@ -920,12 +915,4 @@ li {
   ul > li > ul {
     list-style-position: inside;
   }
-
-  /* .carousel{
-    max-width: 70%;
-  } */
-
-  /* .carousel-root{
-    width: 150%;
-  }  */
 }
